force-app/main/default/objects/BREG_Annuals_Job_Settings__c/BREG_Annuals_Job_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DEPRECATED Contains configurations for Annuals Roll Over job.
Use custom metadata BREG_Annuals_Rollover_Job_Settings__mdt</description>
    <label>DEPRECATED BREG Annuals Job Settings</label>
</CustomObject>