force-app/main/default/objects/BREG_Annuals_Job_Settings__c/fields/Annuals_Submission_Disabled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Annuals_Submission_Disabled_End_Date__c</fullName>
    <description>Date &amp; time when annual submission becomes available</description>
    <label>Annuals Submission Disabled End Date</label>
    <type>DateTime</type>
</CustomField>