force-app/main/default/objects/BREG_Annuals_Job_Settings__c/fields/Annuals_Submission_Disabled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Annuals_Submission_Disabled_Start_Date__c</fullName>
    <label>Annuals Submission Disabled Start Date</label>
    <type>DateTime</type>
</CustomField>