force-app/main/default/objects/BREG_Annuals_Job_Settings__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <description>Date &amp; Time when Job should start</description>
    <label>Job Start Date</label>
    <type>DateTime</type>
</CustomField>